--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        <section class="cover">
     <div class="cover__container">
         <div class="cover-image">
-            <img src="https://fmaa26.github.io/personal.io/publicimages/profile-pic.jpg" alt="صورة شخصية">
+            <img src="images/profile-pic.jpg" alt="صورة شخصية">
         </div>
         <div class="cover-info">
             <h1>أحمد محمود</h1>
